fixing crummy margin on mobile view during transitions

--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -1,3 +1,8 @@
 .ui-content li {
   line-height: 1.5em;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
